# simple-ytdl-qt

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml
src/: main.py
src/widgets/: download_console.py
