[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "simple-ytdl-qt"
description = "A simple GUI for yt-dlp"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = { text = "GNU GPLv3" }
authors = [
    {name = "Nexus", email = "packages@nexy7574.co.uk"}
]
dependencies = ["PyQt5", "yt-dlp"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "main.__version__" }


[project.scripts]
simple-ytdl-qt-foreground = "src.main:main"


[project.gui-scripts]
simple-ytdl-qt5 = "src.main:main"
