[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "simple-ytdl-qt"
description = "A simple GUI for yt-dlp"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = { text = "GNU GPLv3" }
authors = [
    {name = "Nexus", email = "packages@nexy7574.co.uk"}
]
dependencies = ["PyQt5", "yt-dlp"]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/__version__.py"


[project.scripts]
simple-ytdl-qt-foreground = "main:main"


[project.gui-scripts]
simple-ytdl-qt5 = "main:main"
